@@ -1,6 +1,7 @@
 2010-04-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
-	* photoimageclutter.py: Improved icon animation on fullscreen.
+	* photoimageclutter.py, actors.py, animation.py: Improved icon
+	  animation on fullscreen.
 
 2010-04-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
